minio/kustomize/k3d/ingressroutes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio-https
  namespace: common
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`s3.mayongcong.net`) || Host(`oss.mayongcong.net`)
      priority: 10
      services:
        - name: minio
          port: 9001
    - kind: Rule
      match: Host(`s3-api.mayongcong.net`) || Host(`oss-api.mayongcong.net`)
      priority: 10
      services:
        - name: minio
          port: 9000
  tls:
    secretName: minio
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
spec:
  redirectScheme:
    scheme: https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio-http-redirect
spec:
  entryPoints:
  - web
  routes:
    - kind: Rule
      match: Host(`s3.mayongcong.net`) || Host(`oss.mayongcong.net`)
      priority: 10
      services:
        - name: minio
          port: 9001
          passHostHeader: true
          responseForwarding:
            flushInterval: 1ms
          scheme: http
    - kind: Rule
      match: Host(`s3-api.mayongcong.net`) || Host(`oss-api.mayongcong.net`)
      priority: 10
      services:
        - name: minio
          port: 9000
          passHostHeader: true
          responseForwarding:
            flushInterval: 1ms
          scheme: http
